--- a/carousel2/styles/css.css
+++ b/carousel2/styles/css.css
@@ -57,28 +57,28 @@ body, div, ul, li, img {
 /*大图按钮开始*/
 #carousel .big div {
 	display: block;
-	width: 50px;
-	height: 50px;
-	border-radius: 10px;
+	width: 25px;
+	height: 70px;
 	position: absolute;
-	font-size: 48px;
-	line-height: 50px;
+	font-family: "SimSun";
+	font-size: 38px;
+	line-height: 70px;
 	font-weight: bold;
-	color: black;
-	background-color: #ccc;
+	color: #fff;
+	background: rgba(0, 0, 0, 0.5);
 	cursor: pointer;
 }
 #carousel .prevBtn {
 	left: 0;
 	top: 50%;
-	margin-top: -25px;
+	margin-top: -35px;
 	opacity: 0;
 	filter: alpha(opacity: 0);
 }
 #carousel .nextBtn {
 	right: 0;
 	top: 50%;
-	margin-top: -25px;
+	margin-top: -35px;
 	opacity: 0;
 	filter: alpha(opacity: 0);
 }
